--- a/cmakeDemo/practice/QhttpDemo/CMakeLists.txt
+++ b/cmakeDemo/practice/QhttpDemo/CMakeLists.txt
@@ -10,6 +10,10 @@ set(QT_PATH D:/Qt/qt_app/5.14.2/msvc2017_64)
 # set(QT_PATH D:/Qt/qt_app/5.14.2/mingw73_64)
 set(CMAKE_PREFIX_PATH ${QT_PATH}/lib/cmake)
 
+#第三方DLL库文件目录
+set(DLL_SOURCE_DIR D:/github_proj/advanceC++/MyThirdparty)
+
+
 # 指明静态库所在路径 在 MinGW 环境下，静态库文件通常是以 .a 结尾
 # 在 MSVC 环境下，静态库文件通常是以 .lib 结尾
 link_directories(${QT_PATH}/lib)
@@ -23,6 +27,23 @@ link_directories(${QT_PATH}/lib)
 # find_library(QT5_WIDGETS_LIBRARY Qt5Widgets.dll PATHS ${QT_PATH}/bin)
 # find_library(QT5_GUI_LIBRARY Qt5Gui.dll PATHS ${QT_PATH}/bin)
 
+# 创建并设置libcrypto-1_1-x64库
+# add_library(libcrypto-1_1-x64 SHARED IMPORTED)
+# set_target_properties(libcrypto-1_1-x64 PROPERTIES IMPORTED_LOCATION "D:/github_proj/advanceC++/MyThirdparty/libcrypto-1_1-x64.dll")
+# 创建并设置libssl-1_1-x64库
+# add_library(libssl-1_1-x64 SHARED IMPORTED)
+# set_target_properties(libssl-1_1-x64 PROPERTIES IMPORTED_LOCATION "D:/github_proj/advanceC++/MyThirdparty/libssl-1_1-x64.dll")
+
+# 先获取DLL_SOURCE_DIR目录下所有.dll文件的列表，存储在DLL_FILES变量中
+file(GLOB DLL_FILES "${DLL_SOURCE_DIR}/*.dll")
+
+# 顺序错误 ；而且可执行文件名 也不是变量CURRENT_DIR_NAME
+# 假设可执行文件名为${CURRENT_DIR_NAME}，.dll文件在${DLL_SOURCE_DIR}目录下，目标是复制到与可执行文件相同的目录
+# add_custom_command(TARGET ${CURRENT_DIR_NAME} POST_BUILD
+#                   COMMAND ${CMAKE_COMMAND} -E copy_if_different
+#                          "${DLL_SOURCE_DIR}/libcrypto-1_1-x64.dll"
+#                           $<TARGET_FILE_DIR:${PROJECT_NAME}>
+# )
 
 
 set(CMAKE_CXX_STANDARD 11) 
@@ -56,9 +77,24 @@ source_group("Form Files" FILES ${UI_FILES})
 source_group("Resource Files" FILES ${RCC_FILES})
 
 
+# 先 生成可执行文件，再复制DLL库到可执行文件所在目录
 
 add_executable(${PROJECT_NAME} WIN32 ${HEADER_FILES} ${CPP_FILES} ${UI_FILES} ${RCC_FILES})
 
+# message("Target file directory: $<TARGET_FILE_DIR:${PROJECT_NAME}>")
+
+# 为每个 DLL 文件生成复制命令
+foreach(dll_file ${DLL_FILES})
+    add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+        COMMAND ${CMAKE_COMMAND} -E copy_if_different
+        "${dll_file}"
+        $<TARGET_FILE_DIR:${PROJECT_NAME}>
+        COMMENT "Copying ${dll_file} to the target directory"
+    )
+endforeach()
+
+# 链接两个库
+# target_link_libraries(${PROJECT_NAME} libcrypto-1_1-x64 libssl-1_1-x64)
 
 target_link_libraries(${PROJECT_NAME} 
 	Qt5::Widgets
