--- a/CppConcurrency/CMakeLists.txt
+++ b/CppConcurrency/CMakeLists.txt
@@ -2,4 +2,6 @@ add_subdirectory(Unit2/part1)
 add_subdirectory(Unit2/part2)
 add_subdirectory(Unit2/part3)
 add_subdirectory(Unit2/part4)
+add_subdirectory(Unit2/part5)
+add_subdirectory(Unit2/part6)
 
