--- a/CppConcurrency/CMakeLists.txt
+++ b/CppConcurrency/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(Unit2/part4)
 add_subdirectory(Unit2/part5)
 add_subdirectory(Unit2/part6)
 add_subdirectory(Unit2/part7)
+add_subdirectory(Unit2/part8)
