--- a/Cpp/placementNew/CMakelists.txt
+++ b/Cpp/placementNew/CMakelists.txt
@@ -2,4 +2,7 @@ cmake_minimum_required(VERSION 3.10)
 
 PROJECT(placementNew)
 
-add_executable(${PROJECT_NAME} main.cpp )
+add_executable(${PROJECT_NAME} 
+	main.cpp 
+	test01.cpp
+	test02.cpp)
