--- a/Cpp/placementNew/CMakelists.txt
+++ b/Cpp/placementNew/CMakelists.txt
@@ -1,8 +1,12 @@
 cmake_minimum_required(VERSION 3.10)
 
+set(CMAKE_CXX_STANDARD 23)
+
 PROJECT(placementNew)
 
 add_executable(${PROJECT_NAME} 
 	main.cpp 
 	test01.cpp
-	test02.cpp)
+	test02.cpp
+	test03.cpp
+)
